@@ -83,6 +83,7 @@ void initService(struct Service *service, const char *arg) {
   }
   arg                                       = ptr + 1;
 
+#ifdef HAVE_BIN_LOGIN
   // The next part of the argument is either the word 'LOGIN' or the
   // application definition.
   if (!strcmp(arg, "LOGIN")) {
@@ -93,6 +94,7 @@ void initService(struct Service *service, const char *arg) {
     service->useLogin                       = 1;
     service->useHomeDir                     = 0;
     service->authUser                       = 0;
+    service->useDefaultShell                = 0;
     service->uid                            = 0;
     service->gid                            = 0;
     check(service->user                     = strdup("root"));
@@ -100,10 +102,13 @@ void initService(struct Service *service, const char *arg) {
     check(service->cwd                      = strdup("/"));
     check(service->cmdline                  = strdup(
                                                   "/bin/login -p -h ${peer}"));
-  } else if (!strcmp(arg, "SSH") || !strncmp(arg, "SSH:", 4)) {
+  } else
+#endif
+  if (!strcmp(arg, "SSH") || !strncmp(arg, "SSH:", 4)) {
     service->useLogin                       = 0;
     service->useHomeDir                     = 0;
     service->authUser                       = 2;
+    service->useDefaultShell                = 0;
     service->uid                            = -1;
     service->gid                            = -1;
     service->user                           = NULL;
@@ -204,7 +209,13 @@ void initService(struct Service *service, const char *arg) {
     if (!*arg) {
       goto error;
     }
-    check(service->cmdline                  = strdup(arg));
+    if (!strcmp(arg, "SHELL")) {
+      service->useDefaultShell              = 1;
+      service->cmdline                      = NULL;
+    } else {
+      service->useDefaultShell              = 0;
+      check(service->cmdline                = strdup(arg));
+    }
   }
   free(desc);
 }
